### Changed - 興行区分サービスと配給区分サービスを使用しないように調整

--- a/views/serviceTypes/form.ejs
+++ b/views/serviceTypes/form.ejs
@@ -1,14 +1,15 @@
 <div class="form-group">
-    <label for="name" class="">
+    <label for="name[ja]" class="">
         名称<span class="text-danger">＊</span>
     </label>
-    <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
+    <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
+        value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>">
     <p class="message">
         全角64文字以内でご入力ください。
     </p>
     <p class="error message text-danger">
-        <% if (errors && errors.name) { %>
-        <%- errors.name.msg %>
+        <% if (errors && errors['name.ja']) { %>
+        <%- errors['name.ja'].msg %>
         <% } %>
     </p>
 </div>
