--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -70,8 +70,8 @@ Aa-17
             <tbody>
                 <tr id="templateRow" identifier="$id$">
                     <td name="codeValue">$codeValue$</td>
-                    <td name="name">
-                        $name$
+                    <td name="name.ja">
+                        $name.ja$
                     </td>
                     <td name="edit__id__id">
                         <div class="text-center">
