### Changed - 価格仕様とアドオンに名称編集を追加

--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -95,6 +95,7 @@ PS-02
             <thead>
                 <tr>
                     <th>価格仕様タイプ</th>
+                    <th>名称</th>
                     <th>適用カテゴリー</th>
                     <th>適用ムビチケ券種区分</th>
                     <th>金額</th>
@@ -105,6 +106,7 @@ PS-02
                     <td name="id__typeOf">
                         <a target="_blank" href="/priceSpecifications/$id$/update">$typeOf$</a>
                     </td>
+                    <td name="name.ja">$name.ja$</td>
                     <td name="appliesToCategoryCode.inCodeSet.identifier__appliesToCategoryCode.codeValue">
                         $appliesToCategoryCode.inCodeSet.identifier$
                         $appliesToCategoryCode.codeValue$</td>
