--- a/views/priceSpecifications/form.ejs
+++ b/views/priceSpecifications/form.ejs
@@ -19,6 +19,22 @@
 </div>
 
 <div class="form-group">
+    <label for="name[ja]" class="">
+        名称<span class="text-danger">＊</span>
+    </label>
+    <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=30
+        value=<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>>
+    <p class="message">
+        30文字以内でご入力ください。
+    </p>
+    <p class="error message text-danger">
+        <% if (errors && errors['name.ja']) { %>
+        <%- errors['name.ja'].msg %>
+        <% } %>
+    </p>
+</div>
+
+<div class="form-group">
     <label for="price" class="">
         金額<span class="text-danger">＊</span>
     </label>
