### Changed - オファーカテゴリー管理を追加

--- a/views/categoryCodes/index.ejs
+++ b/views/categoryCodes/index.ejs
@@ -30,6 +30,9 @@ CC-00
                 <option value="<%= CategorySetIdentifier.DistributorType%>">
                     配給区分
                 </option>
+                <option value="<%= CategorySetIdentifier.OfferCategoryType%>">
+                    オファーカテゴリー
+                </option>
                 <option value="<%= CategorySetIdentifier.VideoFormatType%>">
                     上映方式タイプ
                 </option>
