--- a/views/categoryCodes/form.ejs
+++ b/views/categoryCodes/form.ejs
@@ -15,6 +15,10 @@
             && forms.inCodeSet.identifier === CategorySetIdentifier.DistributorType) { %> selected<% } %>>
             配給区分
         </option>
+        <option value="<%= CategorySetIdentifier.OfferCategoryType %>" <% if (forms.inCodeSet !== undefined
+            && forms.inCodeSet.identifier === CategorySetIdentifier.OfferCategoryType) { %> selected<% } %>>
+            オファーカテゴリー
+        </option>
         <option value="<%= CategorySetIdentifier.VideoFormatType %>" <% if (forms.inCodeSet !== undefined
             && forms.inCodeSet.identifier === CategorySetIdentifier.VideoFormatType) { %> selected<% } %>>
             上映方式タイプ
