--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -86,10 +86,9 @@ Aa-6
             </div>
         </div>
 
-        <% if (process.env.USE_OFFER_CATEGORY === '1') { %>
         <div class="form-group">
             <label for="category[id]" class="">
-                券種区分
+                オファーカテゴリー
             </label>
             <select class="form-control" name="category[id]">
                 <option value="">---</option>
@@ -100,7 +99,6 @@ Aa-6
                 <% }) %>
             </select>
         </div>
-        <% } %>
 
         <div class="panel-body">
             <a class="btn btn-primary" role="button" href="/ticketTypes/add">
