--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -1,7 +1,6 @@
-<% if (process.env.USE_OFFER_CATEGORY === '1') { %>
 <div class="form-group">
     <label for="name[ja]" class="">
-        券種の種別
+        オファーカテゴリー
     </label>
     <select class="form-control" name="category">
         <option value="" disabled selected>選択してください</option>
@@ -13,9 +12,6 @@
         <% } %>
     </select>
 </div>
-<% } else { %>
-<input type="hidden" name="category" value="1">
-<% } %>
 
 <div class="form-group">
     <label for="name[ja]" class="">
