### Changed - 券種種別をカテゴリーコード管理から検索するように調整

--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -12,7 +12,7 @@ PR-00
 
 <%- contentFor('body') %>
 
-<div class="form-container search mb-3 searchCategoryCode">
+<div class="form-container search mb-3 searchProducts">
     <form method="post" class="p-3 bg-light-gray">
         <%- include('../common/master/_hidden') %>
         <div class="menu-group">
