--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -136,7 +136,7 @@ Aa-11
                         <option value="">オファーカテゴリー選択</option>
                         <% for (let ticketTypeCategory of ticketTypeCategories) { %>
                         <option value="<%= ticketTypeCategory.id %>">
-                            <%= ticketTypeCategory.name %>
+                            <%= ticketTypeCategory.name.ja %>
                         </option>
                         <% } %>
                     </select>
@@ -245,12 +245,12 @@ Aa-11
                         <p class="font-italic">$reservationFor.location.name.ja$</p>
                     </td>
                     <td
-                        name="reservedTicket.typeOf__reservedTicket.ticketType.id__reservedTicket.ticketType.name.ja__reservedTicket.ticketType.name.en__unitPriceSpec.price__unitPriceSpec.referenceQuantity.value__unitPriceSpec.priceCurrency__ticketedSeat">
+                        name="reservedTicket.typeOf__reservedTicket.ticketType.id__reservedTicket.ticketType.name.ja__reservedTicket.ticketType.name.en__reservedTicket.ticketType.category.codeValue__unitPriceSpec.price__unitPriceSpec.referenceQuantity.value__unitPriceSpec.priceCurrency__ticketedSeat">
                         <p class="badge badge-secondary">$reservedTicket.typeOf$</p>
                         <p class="font-weight-bold"><a target="_blank"
                                 href="/ticketTypes/$reservedTicket.ticketType.id$/update">$reservedTicket.ticketType.name.ja$
                                 <br>$reservedTicket.ticketType.name.en$</a></p>
-                        <p class="badge badge-info">$ticketType.name$</p>
+                        <p class="badge badge-info">$reservedTicket.ticketType.category.codeValue$</p>
                         <p>$unitPriceSpec.price$ / $unitPriceSpec.referenceQuantity.value$
                             $unitPriceSpec.priceCurrency$</p>
                         <p>$ticketedSeat$</p>
