--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -94,7 +94,7 @@ Aa-6
                 <option value="">---</option>
                 <% ticketTypeCategories.forEach((category) => { %>
                 <option value="<%= category.id %>">
-                    <%= category.name %>
+                    <%= category.name.ja %>
                 </option>
                 <% }) %>
             </select>
@@ -148,8 +148,8 @@ Aa-6
                         </p>
                         <p class="badge badge-secondary">$availability$</p>
                     </td>
-                    <td name="category.id">
-                        <p>$category.id$</p>
+                    <td name="category.codeValue">
+                        <p>$category.codeValue$</p>
                     </td>
                     <td name="name.ja__name.en__alternateName.ja">$name.ja$<br>$name.en$<br>$alternateName.ja$</td>
                     <td name="priceSpecification.price__priceSpecification.priceCurrency__priceSpecification.accounting.accountsReceivable__priceSpecification.priceCurrency__referenceQuantity.value"
