### Added - 券種の高度な名称編集を追加

--- a/views/ticketType/add.ejs
+++ b/views/ticketType/add.ejs
@@ -32,7 +32,7 @@ Aa-5
             </p>
         </div>
 
-        <%- include('form', { forms: forms }) %>
+        <%- include('form', { forms: forms, isNew: true }) %>
 
         <div class="btn-area panel-body">
             <button type="button" class="btn btn-ok btn-primary">登録する</button>
