--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -98,22 +98,54 @@
                                 <label class="col-md-4 text-md-right mb-2 mb-md-0">曜日 <span
                                         class="text-danger">＊</span></label>
                                 <div class="col-md-8">
-
-                                    <div class="form-inline">
-                                        <label class="checkbox-inline mr-3"><input type="checkbox" value="1"
-                                                name="weekDay" checked>月</label>
-                                        <label class="checkbox-inline mr-3"><input type="checkbox" value="2"
-                                                name="weekDay" checked>火</label>
-                                        <label class="checkbox-inline mr-3"><input type="checkbox" value="3"
-                                                name="weekDay" checked>水</label>
-                                        <label class="checkbox-inline mr-3"><input type="checkbox" value="4"
-                                                name="weekDay" checked>木</label>
-                                        <label class="checkbox-inline mr-3"><input type="checkbox" value="5"
-                                                name="weekDay" checked>金</label>
-                                        <label class="checkbox-inline mr-3"><input type="checkbox" value="6"
-                                                name="weekDay" checked>土</label>
-                                        <label class="checkbox-inline mr-3"><input type="checkbox" value="0"
-                                                name="weekDay" checked>日</label>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label"><input class="form-check-input" type="checkbox"
+                                                value="1" name="weekDay" checked>月
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label"><input class="form-check-input" type="checkbox"
+                                                value="2" name="weekDay" checked>火
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label"><input class="form-check-input" type="checkbox"
+                                                value="3" name="weekDay" checked>水
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label"><input class="form-check-input" type="checkbox"
+                                                value="4" name="weekDay" checked>木
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label"><input class="form-check-input" type="checkbox"
+                                                value="5" name="weekDay" checked>金
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label"><input class="form-check-input" type="checkbox"
+                                                value="6" name="weekDay" checked>土
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span></label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label"><input class="form-check-input" type="checkbox"
+                                                value="0" name="weekDay" checked>日
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span></label>
                                     </div>
                                 </div>
                             </div>
@@ -124,15 +156,34 @@
                                 <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="saleStartDate">販売開始日</label>
                                 <div class="col-md-8">
-                                    <div class="form-inline">
-                                        <label class="radio-inline mr-3">
-                                            <input type="radio" value="default" name="saleStartDateType"
-                                                checked>劇場設定に従う</label>
-                                        <label class="radio-inline mr-3">
-                                            <input type="radio" value="absolute" name="saleStartDateType">絶対</label>
-                                        <label class="radio-inline mr-3">
-                                            <input type="radio" value="relative" name="saleStartDateType">相対</label>
+                                    <div class="form-check form-check-radio form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" name="saleStartDateType"
+                                                id="inlineRadio1" value="default" checked>劇場設定に従う
+                                            <span class="circle">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
                                     </div>
+                                    <div class="form-check form-check-radio form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" name="saleStartDateType"
+                                                id="inlineRadio1" value="absolute">絶対
+                                            <span class="circle">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-radio form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" name="saleStartDateType"
+                                                id="inlineRadio1" value="relative">相対
+                                            <span class="circle">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
+                                    </div>
+
                                     <div class="form-inline d-none input-type" data-input-type="absolute">
                                         <input class="form-control datepicker" name="saleStartDateAbsolute"
                                             placeholder="YYYY/MM/DD" maxlength=10>
@@ -155,13 +206,26 @@
                                 <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="onlineDisplayStartDate">オンライン表示開始日</label>
                                 <div class="col-md-8">
-                                    <div class="form-inline">
-                                        <label class="radio-inline mr-3">
-                                            <input type="radio" value="absolute" name="onlineDisplayType"
-                                                checked>絶対</label>
-                                        <label class="radio-inline mr-3">
-                                            <input type="radio" value="relative" name="onlineDisplayType">相対</label>
+
+                                    <div class="form-check form-check-radio form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" name="onlineDisplayType"
+                                                id="inlineRadio1" value="absolute" checked>絶対
+                                            <span class="circle">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
                                     </div>
+                                    <div class="form-check form-check-radio form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="radio" name="onlineDisplayType"
+                                                id="inlineRadio1" value="relative">相対
+                                            <span class="circle">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
+                                    </div>
+
                                     <div class="form-inline input-type" data-input-type="absolute">
                                         <input type="text" class="form-control datepicker"
                                             name="onlineDisplayStartDateAbsolute" placeholder="YYYY/MM/DD" maxlength=10>
@@ -178,9 +242,14 @@
                             <div class="row">
                                 <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"></label>
                                 <div class="col-md-8">
-                                    <div class="form-inline">
-                                        <label class="checkbox-inline mr-3"><input type="checkbox" value="1"
-                                                name="reservedSeatsAvailable" checked>座席指定あり</label>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label">
+                                            <input class="form-check-input" type="checkbox" value="1"
+                                                name="reservedSeatsAvailable" checked>座席指定あり
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
@@ -229,7 +298,13 @@
                                             </select>
                                         </td>
                                         <td class="text-center mvtk">
-                                            <input type="checkbox" name="mvtkExcludeFlg">
+                                            <div class="form-check form-check-inline">
+                                                <label class="form-check-label"><input class="form-check-input"
+                                                        type="checkbox" name="mvtkExcludeFlg">
+                                                    <span class="form-check-sign">
+                                                        <span class="check"></span>
+                                                    </span></label>
+                                            </div>
                                         </td>
                                     </tr>
                                     <% } %>
