### Changed - オファー適用条件拡張

--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -62,7 +62,7 @@
         </li>
         <li class="nav-item <%= (displayId === 'PS-02') ? 'active': ''; %>">
             <a class="nav-link" href="/priceSpecifications">
-                <i class="icon fa fa-dollar-sign"></i>
+                <i class="material-icons">attach_money</i>
                 <p>価格仕様 <span class="badge badge-secondary badge-light">Preview</span></p>
             </a>
         </li>
@@ -77,7 +77,7 @@
 
         <li class="nav-item <%= (displayId === 'PR-00') ? 'active': ''; %>">
             <a class="nav-link" href="/products">
-                <i class="icon fa fa-glasses"></i>
+                <i class="material-icons">local_drink</i>
                 <p>プロダクト <span class="badge badge-secondary badge-light">Preview</span></p>
             </a>
         </li>
