--- a/views/ticketType/form.ejs
+++ b/views/ticketType/form.ejs
@@ -63,7 +63,7 @@
 </div>
 
 <div class="form-row">
-    <div class="form-group bmd-form-group col-md-6">
+    <div class="form-group bmd-form-group col-md-3">
         <label for="price" class="bmd-label-static">
             発生金額<span class="text-danger">＊</span>
         </label>
@@ -84,6 +84,7 @@
                 <span class="input-group-text">枚で販売</span>
             </div>
         </div>
+        <span class="bmd-help">半角10文字以内でご入力ください</span>
 
         <p class="error message text-danger">
             <% if (errors && errors.price) { %>
@@ -97,18 +98,30 @@
         </p>
     </div>
 
-    <div class="form-group bmd-form-group col-md-6">
+    <div class="form-group bmd-form-group col-md-3">
+    </div>
+
+    <div class="form-group bmd-form-group col-md-3">
         <label for="accountsReceivable" class="bmd-label-static">
             売上金額<span class="text-danger">＊</span>
         </label>
-        <input type="text" class="form-control" name="accountsReceivable" id="accountsReceivable" placeholder=""
-            maxlength=10 value="<%=forms.accountsReceivable %>">
+        <div class="input-group">
+            <input type="text" class="form-control" name="accountsReceivable" id="accountsReceivable" placeholder=""
+                maxlength=10 value="<%=forms.accountsReceivable %>">
+            <div class="input-group-append">
+                <span class="input-group-text">円として計上</span>
+            </div>
+        </div>
         <span class="bmd-help">半角10文字以内でご入力ください</span>
+
         <p class="error message text-danger">
             <% if (errors && errors.accountsReceivable) { %>
             <%- errors.accountsReceivable.msg %>
             <% } %>
         </p>
+    </div>
+
+    <div class="form-group bmd-form-group col-md-3">
     </div>
 </div>
 
