--- a/views/ticketType/add.ejs
+++ b/views/ticketType/add.ejs
@@ -1,5 +1,5 @@
 <%- contentFor('title') %>
-券種マスタ新規登録
+券種作成
 <%- contentFor('displayId') %>
 Aa-5
 <%- contentFor('styles') %>
@@ -8,27 +8,15 @@ Aa-5
 <script src="/js/tinycolor-min.js"></script>
 <script src="/js/bootstrap.colorpickersliders.js"></script>
 <script src="/js/master/ticketTypeAdd.js"></script>
+
 <%- contentFor('body') %>
-<div class="form-container p-3 bg-light-gray">
+
+<div class="form-container">
     <form method="post">
         <div class="menu-group">
             <%- include('../common/errorMessage') %>
             <%- include('../common/successMessage') %>
         </div>
-
-        <div class="form-group bmd-form-group">
-            <label for="identifier" class="bmd-label-static">
-                券種コード<span class="text-danger">＊</span>
-            </label>
-            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64 value=<%=forms.identifier
-                    %>>
-            <span class="bmd-help">半角64文字以内でご入力ください</span>
-        </div>
-        <p class="error message text-danger">
-            <% if (errors && errors.identifier) { %>
-            <%- errors.identifier.msg %>
-            <% } %>
-        </p>
 
         <%- include('form', { forms: forms, isNew: true }) %>
 
